// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

01/31/2010
	r170 [pakpil]
	* Fixed WA_SWING_DANCE, WA_SYMPHONY_OF_LOVER, WA_MOONLIT_SERENADE, MI_RUSH_WINDMILL, MI_ECHOSONG, MI_HARMONIZE that are not stackable.
	* Fixed WA_SYPMPHONY_OF_LOVER that affect Mdef instead Mdef2.
	* Fexed WA_SWINGDANCE that have a different value to ASPD and SPEED.
	* Added new packet that show exp you gain/lost in  the official server.

01/31/2010
	r168 [Jobbie]
	* Minor fix on eAthena merge. follow up r167
	* Minor fix on Reverberation which calculation to damage not added in battle.c
	* Reverberation, Metallic Sound and Severe Rainstorm should take weapons element.

01/30/2010
	r167 [Jobbie]
	* Merge eAthena Updates upto r14328(excluding those stable updates).

	r166 [pakpil]
	* Fixed max_lv and aura_lv in battle_confing that was caussing problems with 3rd jobs auras. Bug report 99.
	* Added WA_SWING_DANCE, WA_SYMPHONY_OF_LOVER, WA_MOONLIT_SERENADE, MI_RUSH_WINDMILL, MI_ECHOSONG, MI_HARMONIZE and WM_METALICSOUND skills.
	* Added support to packets 0x2ed and 0x2ee that was the lastest spawn/standing packet before the last change.	
	* Minor fix in SC_BITE and SC_ELECTRICSHOKCKER that reduce tick directly instead by percentage.

01/228/2010
	r165 [Rytech]
	*Added in the ID's for the 3rd job exclusive headgears.
	-Ive given them temporary names like RK_Headgear to easly identify each headgear and will later be given official names.
	-Its safe to call up the items through the @item command, but make sure you have a 2010-1-26 client when doing so.
	-These headgears are not ready for player use as their not fully configed.
	-Their currently equiptable by any job, but will be set to their actural exclusive jobs soon.
	-I have NO IDEA what the view ID's for these headgears could be. I never had to do headgears before. If anyone knows them, please message me.

01/28/2010
	r164 [pakpil]